meegotouchhome (0.22.13~1) unstable; urgency=low

  * [UNRELEASED]

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 10 Jan 2011 14:07:31 +0200

meegotouchhome (0.22.12-1) unstable; urgency=low

  * Fixes: NB#210728

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 10 Jan 2011 12:40:00 +0200

meegotouchhome (0.22.11-1) unstable; urgency=low

  * Fixes: NB#208911 - Edit mode of Recents (Switcher) view should exit when status menu or any dialog comes on top.

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 06 Jan 2011 15:44:05 +0200

meegotouchhome (0.22.10-1) unstable; urgency=low

  * Fixes: Fixed _MEEGOTOUCH_VISIBLE_IN_SWITCHER to be set to 0 when window gets removed from switcher but is not destroyed.

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 20 Dec 2010 10:58:03 +0200

meegotouchhome (0.22.9-1) unstable; urgency=low

  * Fixes: NB#204272 - In arabic I don't see any running apps in app page

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 30 Nov 2010 11:58:24 +0200

meegotouchhome (0.22.8-1) unstable; urgency=low

  * Fixes: NB#204512 - Change pinch gesture handling to use totalScaleFactor instead of scaleFactor
  * Fixes: NB#206700 - minimizing window, meegotouchhome crashes
  * Fixes: NB#202350 - Application without _NET_WM_STATE_SKIP_TASKBAR is not visible in the switcher

 -- Aki Koskinen <aki.koskinen@nokia.com>  Thu, 25 Nov 2010 16:54:00 +0200

meegotouchhome (0.22.7-1) unstable; urgency=low

  * Fixes: NB#202259 - Each MotionEvent causes _NET_WM_ICON_GEOMETRY update for a window in switcher

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 22 Nov 2010 17:53:26 +0200

meegotouchhome (0.22.6-1) unstable; urgency=low

  * Fixes: NB#203728 - Recents view freezes and shows only weird minimal icons

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 12 Nov 2010 11:41:26 +0200

meegotouchhome (0.22.5-1) unstable; urgency=low

  * Fixes: NB#202257 - Device reboots after pressing Ctrl-q four times
